Use Optional::stream to avoid passing null values